--- a/src/style-v3.css
+++ b/src/style-v3.css
@@ -120,7 +120,7 @@ body.new h3,
 body.new h4,
 body.new h5,
 body.new h6 {
-    font-family: 'Verdana', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     font-weight: 800;
     margin-top: 0;
     margin-bottom: 1.5rem;
