--- a/src/process.css
+++ b/src/process.css
@@ -1,11 +1,13 @@
 /* RESET */
 
+
+/*
 html {
     width: 100%;
     height: 100%;
     background: #f3f3f3;
     color: #666666;
-}
+}*/
 
 
 /* process */
