--- a/src/form.css
+++ b/src/form.css
@@ -1,9 +1,10 @@
 #feedback-form {
     /* вся форма */
-    max-width: 550px;
+    /*max-width: 550px;*/
     padding: 2%;
     border-radius: 3px;
     background: #f3f3f3;
+    padding-bottom: 20px;
 }
 
 #feedback-form label {
