--- a/src/style-v3.css
+++ b/src/style-v3.css
@@ -122,7 +122,7 @@ body.new h5,
 body.new h6 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 800;
-    margin-top: 0;
+    margin-top: 1.1em;
     margin-bottom: 1.5rem;
     overflow: hidden;
 }
@@ -1449,7 +1449,7 @@ body.new .content.index .index-screen .container h1 {
 
 body.new .content.index .index-screen .image {
     border: none;
-    background-image: url('car.png');
+    /*background-image: url('car.png');*/
     background-size: auto;
     background-repeat: no-repeat;
     background-position-x: -50%;
@@ -1464,7 +1464,7 @@ body.new .content.index .index-screen .image {
         background-position-x: -15%;
         background-position-y: 40%;
         min-height: 350px;
-        padding-bottom: 2rem;
+        /*padding-bottom: 2rem;*/
     }
 }
 
@@ -1478,7 +1478,7 @@ body.new .content.index .index-screen .image {
 }
 
 body.new .content.index .index-screen .image h2 {
-    margin-top: 0;
+    margin-top: 1em;
     margin-bottom: .5rem;
 }
 
@@ -1748,9 +1748,11 @@ body.new .content.index .faq .number {
 }
 
 .money24 {
-    margin-top: 80px;
+    margin-top: 50px;
+    padding-bottom: 5em;
 }
 
-.money24 p {
-    padding-bottom: 30px;
+.p_tags {
+    text-align: left;
+    padding-left: 2em;
 }
