--- a/src/style-v3.css
+++ b/src/style-v3.css
@@ -1756,3 +1756,7 @@ body.new .content.index .faq .number {
     text-align: left;
     padding-left: 2em;
 }
+
+blockquote {
+    border-left: 5px solid #eee0;
+}
