--- a/src/style-v3.css
+++ b/src/style-v3.css
@@ -1748,8 +1748,8 @@ body.new .content.index .faq .number {
 }
 
 .money24 {
-    margin-top: 50px;
-    padding-bottom: 5em;
+    margin-top: 70px;
+    /*padding-bottom: 5em;*/
 }
 
 .p_tags {
@@ -1759,4 +1759,16 @@ body.new .content.index .faq .number {
 
 blockquote {
     border-left: 5px solid #eee0;
+}
+
+.myVideo {
+    border: none;
+    background-image: url(blank_.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-x: 27%;
+    background-position-y: 100%;
+    padding: .9rem 0px 6rem;
+    margin-bottom: 4rem;
+    min-height: 300px;
 }
